@@ -71,6 +71,7 @@ export(auto.correlate)
 export(boot.ergoInfo)
 export(bootEGA)
 export(color_palette_EGA)
+export(community.compare)
 export(community.consensus)
 export(community.detection)
 export(community.homogenize)
